--- a/style.css
+++ b/style.css
@@ -1,6 +1,36 @@
+
+body{
+	width: 1360px;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
+    margin-bottom: auto;
+    overflow-x: hidden;
+}
+
+
+#content{
+    
+    
+    
+}
+
+.imgcarrou{
+    width: 10vw;
+    height: 30em;
+}
+
 .centered {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-  }
+}
+
+.house{
+    width: 35vw;
+}
+.cozyplace{
+    width: 20vw;
+}
